# vlr-scraper

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  base.py  config.py  connection.py  events.py  exporter.py  main.py  match_economy.py  match_logs.py  match_overview.py  match_performance.py  matches.py  parser_helpers.py  players.py  pyproject.toml  queries.py  rankings.py  rate_limiter.py  requirements.txt  schema.sql  stats.py  teams.py
.github/workflows/: ci.yml
tests/: test_parsers.py  test_smoke.py
vlr_scraper/: __init__.py  __main__.py  base.py  cli_ui.py  connection.py  events.py  exporter.py  main.py  match_economy.py  match_logs.py  match_overview.py  match_performance.py  matches.py  parser_helpers.py  players.py  queries.py  r2_publish.py  rankings.py  rate_limiter.py  snapshot.py  snapshot_io.py  stats.py  teams.py
