[project]
name = "vlr-scraper"
version = "0.1.0"
description = "Async VLR.gg scraper with queue-based crawl pipeline and SQLite storage"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.17",
    "beautifulsoup4>=4.12.0",
    "cloakbrowser>=0.3.29",
    "playwright>=1.43.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
export = [
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
