[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlr-scraper"
version = "0.1.0"
description = "Async VLR.gg scraper for Valorant esports matches, players, teams, events, and rankings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ark-daemon" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.17",
    "beautifulsoup4>=4.12.0",
    "cloakbrowser>=0.3.29",
    "playwright>=1.43.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
export = [
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
vlr-scraper = "vlr_scraper.main:app"

[project.urls]
Homepage = "https://github.com/ark-daemon/vlr-scraper"
Repository = "https://github.com/ark-daemon/vlr-scraper"

[tool.setuptools.packages.find]
where = ["."]
include = ["vlr_scraper*"]

[tool.setuptools.package-data]
vlr_scraper = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
